--- a/25-05-13/styles.css
+++ b/25-05-13/styles.css
@@ -6,15 +6,15 @@
 body {
   margin: auto;
   padding: auto;
-  background: #f53d3d;
-  background: linear-gradient(90deg,rgba(245, 61, 61, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(57, 124, 247, 1) 100%);
+  background-image: url("wallpaper.jpg");
+  background-size: cover;
   font-family: Banger;
   color: white;
 }
 
 .navBar {
-  width: 95%;
-  height: 40px;
+  width: 100%;
+  height: 40%;
   background: #693333;
   background: linear-gradient(90deg, rgba(105, 51, 51, 1) 0%, rgba(34, 92, 50, 1) 50%, rgba(23, 49, 97, 1) 100%);
   text-align: center;
@@ -27,9 +27,9 @@ body {
 
 .middle {
   width: 50%;
-  height: auto;
+  height: 500px;
   text-align: center;
-  background: rgba(97, 96, 96, 0.7);
+  background: rgba(255, 133, 133, 0.913);
   margin: auto;
   padding: 1px 40px 30px 40px;
   border-radius: 20px;
@@ -41,6 +41,7 @@ h1 {
 
 h3 {
   padding-top: 50px;
+  font-size: 30px;
 }
 
 a {
@@ -59,18 +60,25 @@ button {
 
 input {
   font-family: Banger;
-  ;
 }
 
 .homeButton {
   width: 160px;
   height: 90px;
   font-size: 30px;
-  
+
 }
 
 .box {
-  background: rgba(109, 109, 109, 0.756);
-  width: 50%;
+  background: rgba(78, 255, 122, 0.756);
+  width: 49%;
+  height: 300px;
+  padding: 1px 0px 50px 0px;
+  border-radius: 10px;
+  float: left;
+  border: 2px solid rgb(155, 0, 0)
+}
 
+.boxes {
+  padding: 20px;
 }
